--- a/algoritmos-comprobacion.html
+++ b/algoritmos-comprobacion.html
@@ -48,7 +48,7 @@
                     <div class="limiter">
                         <div class="container-table">
                             <div class="wrap-table">
-                                <div class="table" id="tabla-cuadrados-medios">                                
+                                <div class="table" id="tabla-chi-cuadrada">                                
                                 </div>
                             </div>
                         </div>
@@ -90,5 +90,8 @@
             </div>
         </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jstat/1.9.6/jstat.min.js" integrity="sha512-UK8MjH09aePxFAd8OwI5P4oP462OBBNGVh3OtnuHjybd0T3ArUbAseIuHpS1XfinmMXcCZG5barC+7SNPjuQtg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="module" src="js/comprobacion/script.js"></script>
 </body>
 </html>
