--- a/juego-desktop-1.html
+++ b/juego-desktop-1.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/css.css">
     <title>Juego</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="main-container">
@@ -103,10 +106,10 @@
                     </div>
                 </div>
             </div>
-            <Button class="btn">
+            <Button class="btn" id="btn-menu-play">
                 <div class="text-btn">
                     <img src="./Images/home.png" class="img-btn"> 
-                    <a href="index.html">Menú</a>
+                    <p>Menú</p>
                 </div>
             </Button>
         </div>
@@ -131,6 +134,39 @@
             </div>
         </div>
     </div>
+
+    <dialog class="modal" id="menu-play">
+        <h1>Pausa</h1>
+
+        <div class="modal-btns">
+            <Button class="btn btn-green" id="btn-close-menu-play">
+                <div class="text-btn">
+                    <i class="fa-solid fa-play"></i>
+                    <p>Continuar</p>
+                </div>
+            </Button>
+
+            <Button class="btn">
+                <div class="text-btn">
+                    <a href="./juego-desktop-1.html">
+                        <i class="fa-solid fa-rotate-right"></i>
+                        Reiniciar
+                    </a>
+                </div>
+            </Button>
+
+            <Button class="btn btn-red">
+                <div class="text-btn">
+                    <a href="./index.html">
+                        <i class="fa-solid fa-right-from-bracket"></i>
+                        Salir
+                    </a>
+                </div>
+            </Button>
+        </div>
+    </dialog>
+    
+    <div id="resultado"></div>
 
     <script type="module" src="js/play.js"></script>
 </body>
